fixed overflow in x axis

--- a/src/presentation/scss/_starter.scss
+++ b/src/presentation/scss/_starter.scss
@@ -10,7 +10,7 @@ body{
   min-height: 100vh;
   background-color: white;
   font-family: globals.$roboto, sans-serif ;
-
+  overflow-x: hidden;
 }
 *, *::before, *::after {
   box-sizing: inherit;
